- evaluation of a subset of emTeX specials has been added
- specials for embedding raw SVG snippets has been added

dvisvgm-0.7
- basic support for evaluation of specials has been added
- evaluation of color specials has been added
- renamed command-line option -S to --no-specials and inverted previous behavior
- selected special sets can be disabled by optional arguments to --no-specials
  (currently only color specials)
- added option --no-style (see manpage for further details)
- added optional '+' flag to option --map-file (see manpage for further details)
- fixed \magnificaton bug (dvi magnification factor is now applied properly)
- fixed buggy call of maketfm/makemf in Windows/MiKTeX version
- fixed buggy evaluation of command-line argument -m/--map-file
- several internal code improvements

dvisvgm-0.6.1
- added support for dvips map files
- removed dependency on dvipdfm's map file (now ps2pk.map, psfonts.map or dvipdfm.map is used by default)
- fixed compilation bug #2535497
- some internal refactorings

dvisvgm-0.6
- added support for varying font encodings
- updated MiKTeX support using its COM interface
- fixed incomplete handling of nested virtual fonts
- fixed a font handling bug that could cause segmentation faults
- fixed bug in matrix transformation code
- updated bundled potrace library to version 1.8

dvisvgm-0.5
- redesigned and improved font handling
- added support for virtual fonts
- evaluation of dvipdfm's map file to find font files with differing 
  names (e.g. cork-lmr10 => lmr10)
- automatic invocation of mktexmf etc. in case of missing font files (tfm, mf)
- command-line option -m has been renamed to -M
- added command-line options -m/--map-file and -n/--no-mktexmf
- memory bug in StreamCounter class has been fixed
- added sources of Peter Selinger's potrace library (part of potrace, http://potrace.sourceforge.net) 
  to simplify the build process

dvisvgm-0.4.3