@@ -12,18 +12,18 @@ dvisvgm_SOURCES      = cmdline.h gzstream.h cmdline.c StreamCounter.h \
 dvisvgm_LDADD        = $(noinst_LIBRARIES) @EXTRA_LIBS@ ../potracelib/libpotrace.a
 dvisvgm_DEPENDENCIES = $(noinst_LIBRARIES) @EXTRA_LIBS@
 
-libdvisvgm_a_SOURCES = Bitmap.h BoundingBox.h Calculator.h CharmapTranslator.h \
+libdvisvgm_a_SOURCES = Bitmap.h BoundingBox.h Calculator.h CharmapTranslator.h Color.h \
    Directory.h DVIActions.h DVIBBoxActions.h DVIReader.h DVIToSVG.h DVIToSVGActions.h FileSystem.h Font.h \
 	FontEmitter.h FontEncoding.h FontEngine.h FontGlyph.h FontManager.h FontMap.h GFReader.h GFTracer.h GFGlyphTracer.h \
 	InputBuffer.h FileFinder.h macros.h Message.h MessageException.h MetafontWrapper.h PageSize.h Pair.h \
-	SpecialActions.h SpecialColorHandler.h SpecialEmHandler.h SpecialHandler.h SpecialManager.h StreamReader.h SVGFontEmitter.h \
-	SVGFontTraceEmitter.h TFM.h TransformationMatrix.h types.h VectorStream.h VerbSpecialHandler.h VFActions.h VFReader.h \
-	XMLDocTypeNode.h XMLDocument.h XMLNode.h XMLString.h \
-	Bitmap.cpp BoundingBox.cpp Calculator.cpp CharmapTranslator.cpp Directory.cpp DVIActions.cpp \
+	SpecialColorHandler.h SpecialDvisvgmHandler.h SpecialEmHandler.h SpecialHandler.h SpecialManager.h \
+	StreamReader.h SVGFontEmitter.h SVGFontTraceEmitter.h TFM.h TransformationMatrix.h types.h VectorStream.h VFActions.h \
+	VFReader.h XMLDocTypeNode.h XMLDocument.h XMLNode.h XMLString.h \
+	Bitmap.cpp BoundingBox.cpp Calculator.cpp CharmapTranslator.cpp Color.cpp Directory.cpp DVIActions.cpp \
    DVIReader.cpp DVIToSVG.cpp DVIToSVGActions.cpp FileSystem.cpp Font.cpp FontEncoding.cpp FontEngine.cpp FontGlyph.cpp \
 	FontManager.cpp FontMap.cpp GFReader.cpp GFGlyphTracer.cpp GFTracer.cpp InputBuffer.cpp FileFinder.cpp Message.cpp \
-	MetafontWrapper.cpp PageSize.cpp SpecialColorHandler.cpp SpecialEmHandler.cpp SpecialManager.cpp StreamReader.cpp \
-	SVGFontEmitter.cpp SVGFontTraceEmitter.cpp TFM.cpp TransformationMatrix.cpp VerbSpecialHandler.cpp VFReader.cpp \
+	MetafontWrapper.cpp PageSize.cpp SpecialColorHandler.cpp SpecialDvisvgmHandler.cpp SpecialEmHandler.cpp SpecialManager.cpp \
+	StreamReader.cpp SVGFontEmitter.cpp SVGFontTraceEmitter.cpp TFM.cpp TransformationMatrix.cpp VFReader.cpp \
 	XMLDocument.cpp XMLNode.cpp XMLString.cpp
 
 EXTRA_DIST = miktex-kps.h miktex-core.def miktex-kps.def options.ggo getopt.h getopt.c getopt1.c 
