@@ -1,5 +1,5 @@
 /***********************************************************************
-** VerbSpecialHandler.cpp                                             **
+** SpecialDvisvgmHandler.h                                            **
 **                                                                    **
 ** This file is part of dvisvgm -- the DVI to SVG converter           **
 ** Copyright (C) 2005-2009 Martin Gieseking <martin.gieseking@uos.de> **
@@ -20,26 +20,17 @@
 ** Boston, MA 02110-1301, USA.                                        **
 ***********************************************************************/
 
-#include <iterator>
-#include "debug.h"
-#include "VerbSpecialHandler.h"
-#include "XMLNode.h"
+#ifndef SPECIALDVISVGMHANDLER_H
+#define SPECIALDVISVGMHANDLER_H
 
-using namespace std;
+#include "SpecialHandler.h"
 
+class SpecialDvisvgmHandler : public SpecialHandler
+{
+   public:
+		const char* prefix () const {return "dvisvgm";}
+		const char* info () const   {return "special set for embedding raw SVG";}
+		void process (istream &in, SpecialActions *actions);
+};
 
-void VerbSpecialHandler::process (istream &is, SpecialActions *actions) {
-	if (actions) {
-		string str;
-		while (is && !is.eof()) {
-			char c = is.get();
-			if (isprint(c))
-				str += c;
-		}
-		XMLElementNode *group = new XMLElementNode("g");
-		group->addAttribute("x", actions->getX());
-		group->addAttribute("y", actions->getY());
-		group->append(new XMLTextNode(str)); // plain copy
-		actions->appendInPage(group);
-	}
-}
+#endif
