@@ -1,5 +1,5 @@
 /***********************************************************************
-** SpecialEmHandler.h                                                 **
+** SpecialHtmlHandler.h                                               **
 **                                                                    **
 ** This file is part of dvisvgm -- the DVI to SVG converter           **
 ** Copyright (C) 2005-2009 Martin Gieseking <martin.gieseking@uos.de> **
@@ -20,37 +20,17 @@
 ** Boston, MA 02110-1301, USA.                                        **
 ***********************************************************************/
 
-#ifndef SPECIALEMHANDLER_H
-#define SPECIALEMHANDLER_H
+#ifndef SPECIALHTMLHANDLER_H
+#define SPECIALHTMLHANDLER_H
 
-#include <list>
-#include <map>
-#include "Pair.h"
 #include "SpecialHandler.h"
 
-
-class SpecialEmHandler : public SpecialHandler
+class SpecialHtmlHandler : public SpecialHandler
 {
-	struct Line {
-		Line (int pp1, int pp2, char cc1, char cc2, double w) : p1(pp1), p2(pp2), c1(cc1), c2(cc2), width(w) {}
-		int p1, p2;   ///< point numbers of line ends
-		char c1, c2;  ///< cut type of line ends (h, v or p)
-		double width; ///< line width
-	};
-
    public:
-      SpecialEmHandler ();
-		const char* prefix () const {return "em";}
-		const char* info () const  {return "line drawing statements of the emTeX special set";}
-		void process (istream &in, SpecialActions *actions);
-		void endPage ();
-
-   private:
-		std::map<int, DPair> _points; ///< points defined by special em:point
-		std::list<Line> _lines;       ///< list of lines with undefined end points
-		double _linewidth;            ///< global line width
-		DPair _pos;                   ///< current position of "graphic cursor"
-		SpecialActions *_actions;     
+		const char* prefix () const {return "html";}
+		const char* info () const   {return "support of hyperref specials";}
+		void process (istream &in, SpecialActions *actions) {}
 };
 
 #endif
